--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> 
     <script src="index.js"></script>
+    <link rel="icon" href="Logo(1).png" type="image/icon type">
 </head>
 <body>
     <nav>
@@ -81,16 +82,16 @@
         </div>
         <div class="design_section_grid">
             <div id="item-0"> <a href="https://gensketch.com/" target="_blank">
-                <h5>Creative Coding Blog.</h5>
+                <h5>Ultimate Quiz App</h5>
                     <p>Creative blog related to all things art and coding.  </p>
                 </a>
             </div>
             <div id="item-1">Main Project</div>
             <div id="item-2"> 
-                <a href="https://dribbble.com/shots/19779467-Findly-Pet-Resources" target="_blank">
-                    <h5>J & B Contract Services.</h5>
-                    <p>Website for client for an innovative contract company.  </p>
-                    </a>
+                <a href="https://gensketch.com/" target="_blank">
+                    <h5>Creative Coding Blog.</h5>
+                    <p>Creative blog related to all things art and coding.  </p>
+                </a>
             </div>
             <div id="item-3">   
        
