adding main project image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cynthia</title>
+    <title>Cynthia | Designer & Developer</title>
     <link href="index.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> 
@@ -57,7 +57,9 @@
                     <p>This cutting-edge mobile design is intended to provide you access to all the special features in one spot if you deal with thyroid issues! </p>
                     </a>
             </div>
-            <div id="item-1">Main Project</div>
+            <div id="item-1">
+                <img src="iPhone 13 Pro.png" id="iphone_mockup">
+            </div>
             <div id="item-2"> 
                 <a href="https://dribbble.com/shots/19925552-Student-Dashboards" target="_blank">
                 <h5>Student Dashboard.</h5>
@@ -81,11 +83,11 @@
         </div>
         <div class="design_section_grid">
             <div id="item-0"> <a href="#" target="_blank">
-                <h5>Ultimate Quiz App</h5>
-                    <p>Creative blog related to all things art and coding.  </p>
+                <h5>Landing page.</h5>
+                    <p> </p>
                 </a>
             </div>
-            <div id="item-1">Main Project</div>
+            <div id="item-1"></div>
             <div id="item-2"> 
                 <a href="https://gensketch.com/" target="_blank">
                     <h5>Creative Coding Blog.</h5>
