adding landing page for client web design

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 </head>
 <body>
     <nav>
-
+        <div class="logo">
+            <img src="Logo(1).png" alt="logo">
+        </div>
         <ol>
             <li><a href='#about' > About</a></li>
                 <li><a href='#projects' > Projects</a></li>
                 <li><a href='#contact' > Connect</a></li>
             </ol>
+            <svg class='line' width="30" height="30" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.49999 0.5H13.5M1.49799 4.5H13.495M1.49999 8.5H13.495" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
         </nav>
     <section class='main_section'>
         <div class="header"> 
@@ -26,6 +31,7 @@
         </div>
         <div id="p5_sketch">
         </div>
+    
    </section>
 
 
@@ -67,7 +73,7 @@
                 <a href="https://dribbble.com/shots/19779467-Findly-Pet-Resources" target="_blank">
                     <h5>Pet Resources Design.</h5>
                     <p>Web design resource page for easily accessible pet supplies.
-                        You can make use of all the services here, including finding out about events, adoption, and veterinarians!  </p>
+                    </p>
                 </a>
                 
             </div>
@@ -78,9 +84,10 @@
         </div>
         <div class="design_section_grid">
             <div id="item-1">
-                <a href="#" target="_blank">
-                    <h5>Landing page.</h5>
-                        <p></p>
+                <a href="https://jbhomeservices.netlify.app/" target="_blank">
+                    <h5>J&B Home Remodeling.</h5>
+                        <p>Landing page for a home remodeling company's website.
+                        </p>
                     </a>
             </div>
             <div id="item-2"> 
@@ -104,7 +111,7 @@
         <button>Contact</button>
     </footer>
  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js" integrity="sha512-WJXVjqeINVpi5XXJ2jn0BSCfp0y80IKrYh731gLRnkAS9TKc5KNt/OfLtu+fCueqdWniouJ1ubM+VI/hbo7POQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     </body>
 </body>
