--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="icon" href="./assets/Logo(1).png" type="image/icon type">
 </head>
 <body>
-    <nav>
+    <nav class="main-nav">
         <div class="logo">
             <img src="./assets/Logo(1).png" alt="logo">
         </div>
-        <ol>
+        <ol class="menu-item">
             <li><a href='#about' > About</a></li>
-                <li><a href='#projects' > Projects</a></li>
+                <li><a href='#projects'> Projects</a></li>
                 <li><a href='#contact' > Connect</a></li>
             </ol>
             <svg class='line' width="30" height="30" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -135,6 +135,7 @@
     
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js" integrity="sha512-WJXVjqeINVpi5XXJ2jn0BSCfp0y80IKrYh731gLRnkAS9TKc5KNt/OfLtu+fCueqdWniouJ1ubM+VI/hbo7POQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
 
     </body>
 </body>
