adding links to socials

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </p>
           </form>
         <div class="socials">
-            <a href="" ><img src="./assets/github.png" alt="github"></a>
+            <a href="https://github.com/bluelogix" ><img src="./assets/github.png" alt="github"></a>
             <a href="https://dribbble.com/bluelogix" >
                 <img id='dribble' src="./assets/dribble.png" alt="dribbble">
             </a>
