--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             </p>
           </form>
         <div class="socials">
-            <a href="https://github.com/bluelogix" ><img src="./assets/github.png" alt="github"></a>
-            <a href="https://dribbble.com/bluelogix" >
+            <a href="https://github.com/bluelogix" target="_blank"><img src="./assets/github.png" alt="github"></a>
+            <a href="https://dribbble.com/bluelogix" target="_blank">
                 <img id='dribble' src="./assets/dribble.png" alt="dribbble">
             </a>
 
