--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="about" id="about">
             <h2>About <br>
                 me.</h2>
-            <p>Creative developer and instrutor who loves web design. I enjoy helping people create beautiful, functional websites that reflect their unique brand and personality. With a passion for teaching and sharing knowledge with others, I believe that learning should be fun, engaging and inclusive.  </p>
+            <p>Creative developer and instructor who loves web design. I enjoy helping people create beautiful, functional websites that reflect their unique brand and personality. With a passion for teaching and sharing knowledge with others, I believe that learning should be fun, engaging and inclusive.  </p>
         </div>   
     </section>
 
