--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div id="item-2"> 
                 <a href="https://gensketch.com/" target="_blank">
                     <h5>Creative Coding Blog.</h5>
-                    <p>Creative blog related to all things art and coding.  </p>
+                    <p>Blog about all things coding and artistic. </p>
                 </a>
             </div>
             <div id="item-3">   
