--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
     </section>
     
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <h4>Let's make <br>something <span>cool.</span></h4>
         <form name="contact" method="POST" data-netlify="true">
             <p>
