adding meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Creating innovative ideas as a web developer and designer.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cynthia | Designer & Developer</title>
     <link href="index.css" rel="stylesheet">
